deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-v1
  namespace: store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: v1
  template:
    metadata:
      labels:
        app: store
        version: v1
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: store-v1
  namespace: store
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"http":"HTTP"}'
    cloud.google.com/neg-status-verbosity: "FULL"
    cloud.google.com/neg-status-uptime-checks-enable: "true"
spec:
  selector:
    app: store
    version: v1
  ports:
  - port: 80
    appProtocol: HTTP
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-german
  namespace: store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: german
  template:
    metadata:
      labels:
        app: store
        version: german
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: store-german
  namespace: store-ns
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"http":"HTTP"}'
    cloud.google.com/neg-status-verbosity: "FULL"
    cloud.google.com/neg-status-uptime-checks-enable: "true"
spec:
  selector:
    app: store
    version: german
  ports:
  - port: 80
    appProtocol: HTTP
    targetPort: 80
