HTTPRoute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store
  namespace: store
spec:
  parentRefs:
  - kind: Gateway
    name: external-https
    namespace: infra
  hostnames:
  - "ttest.disearch.ai"
  rules:
  - backendRefs:
    - name: store-v1
      port: 80
  - matches:
    - path:
        value: /de
    backendRefs:
    - name: store-german
      port: 80
